[tool.poetry]
name = "util"
version = "0.1.0"
description = ""
authors = ["test"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.3"
jpholiday = "^0.1.8"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"
seaborn = "^0.13.2"
geopandas = "^0.14.3"
geopy = "^2.4.1"
bertopic = "^0.16.1"
janome = "^0.5.0"
transformers = "^4.40.1"
sentence-transformers = "^2.7.0"
fugashi = "^1.3.2"
ipadic = "^1.0.0"
torch = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
